# agentic-rpg

./: .gitattributes  .gitignore  CLAUDE.md  FINDINGS_PLAN.md  README.md  TODO.md  pyproject.toml  refactor_phase1.md  refactor_phase2_instruction.md  run  run-debug.sh
credits/: 01_aric_credits.txt  02_elise_credits.txt  03_reiya_credits.txt  04_jep_credits.txt  05_kael_credits.txt
data/encount/: zone_03_marshland.yaml  zone_04_ancient_ruins.yaml  zone_05_mountain_foothills.yaml  zone_07_sunken_cave.yaml  zone_10_final_stronghold.yaml
data/enemies/: enemies_bosses.yaml  enemies_rank_1_F.yaml  enemies_rank_2_E.yaml  enemies_rank_2_S.yaml  enemies_rank_3_D.yaml  enemies_rank_4_C.yaml  enemies_rank_5_B.yaml  enemies_rank_6_A.yaml  enemies_rank_6_D.yaml  enemies_rank_7_E.yaml  enemies_rank_7_S.yaml  enemies_rank_8_SS.yaml  forest_wolf.yaml  frost_dragon.yaml
data/map/: world.yaml  (+6 more)
docs/: 01-Party.md  02-Characters.md  03-Battle.md  04-Bag.md  05-Equipment.md  06-Map.md  07-Apothecally.md  08-Save.md  09-Currency.md  10-Enemy.md  11-Loot.md  12-Flag.md  13-Dialogue.md  15-Transportation.md  17-Scenario.md  18-NewGame.md  19-Validation.md  20-Screen.md  21-Sprites.md  TODO.md  action_items.md  code_review_plan.md  dq_rpg_engine.md  dq_rpg_engine_v2.md  hardcoded-defaults-audit.md  plan-item-box.md  plan-load-screen-redesign.md  plan-systems-gap.md  remaining_refactor.md
engine/: __init__.py  app_module.py  game.py  main.py  required  requirements.txt  settings.py
rusted_kingdoms/: manifest.yaml
story_content/: manifest.yaml
tests/: conftest.py
tools/: cache_buster.py  generate_wall_variations.py  make_battle_sprites.py  migrate_saves.py  repro_menu_alpha.py  sound_test.py  validate.py  visualize_maps.py  visualize_maps_colors.yaml  wangset-graph.py
utils/: validate.py
(+1181 files in other folders)
